parser.output
Terminals unused in grammar

    HEX_LITERAL
    MODOP
    EXPOP
    OROP
    NOTOP
    REMOP
    NEGOP


State 3 conflicts: 1 reduce/reduce


Grammar

    0 $accept: function $end

    1 function: function_header optional_variable body

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type ';'

    3 parameters: parameter more_parameters

    4 more_parameters: ',' parameter more_parameters
    5                | ε

    6 parameter: IDENTIFIER ':' type

    7 optional_parameters: parameters
    8                    | ε

    9 type: INTEGER
   10     | REAL
   11     | CHARACTER

   12 optional_variable: variables
   13                  | ε

   14 variables: variable variables
   15          | ε

   16 variable: IDENTIFIER ':' type IS statement ';'
   17         | IDENTIFIER ':' LIST OF type IS list ';'

   18 list: '(' expressions ')'

   19 expressions: expressions ',' expression
   20            | expression

   21 body: BEGIN_ statement_ END ';'

   22 statement_: statement ';'
   23           | error ';'

   24 statement: expression
   25          | WHEN condition ',' expression ':' expression
   26          | SWITCH expression IS cases OTHERS ARROW statement ';' ENDSWITCH
   27          | if_statement
   28          | fold_statement

   29 if_statement: IF condition THEN statement_ elsif_clauses ENDIF
   30             | IF condition THEN statement_ elsif_clauses ELSE statement_ ENDIF

   31 elsif_clauses: ε
   32              | ELSIF condition THEN statement_ elsif_clauses

   33 fold_statement: FOLD direction operator list_choice ENDFOLD

   34 direction: LEFT
   35          | RIGHT

   36 operator: ADDOP
   37         | MULOP

   38 list_choice: list
   39            | IDENTIFIER

   40 cases: cases case
   41      | ε

   42 case: CASE INT_LITERAL ARROW statement ';'

   43 condition: condition ANDOP relation
   44          | relation

   45 relation: '(' condition ')'
   46         | expression RELOP expression

   47 expression: expression ADDOP term
   48           | term

   49 term: term MULOP primary
   50     | primary

   51 primary: '(' expression ')'
   52        | INT_LITERAL
   53        | CHAR_LITERAL
   54        | REAL_LITERAL
   55        | IDENTIFIER '(' expression ')'
   56        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 18 45 51 55
    ')' (41) 18 45 51 55
    ',' (44) 4 19 25
    ':' (58) 6 16 17 25
    ';' (59) 2 16 17 21 22 23 26 42
    error (256) 23
    IDENTIFIER (258) 2 6 16 17 39 55 56
    INT_LITERAL (259) 42 52
    CHAR_LITERAL (260) 53
    REAL_LITERAL (261) 54
    HEX_LITERAL (262)
    ADDOP (263) 36 47
    MULOP (264) 37 49
    ANDOP (265) 43
    RELOP (266) 46
    ARROW (267) 26 42
    MODOP (268)
    EXPOP (269)
    OROP (270)
    NOTOP (271)
    REMOP (272)
    NEGOP (273)
    BEGIN_ (274) 21
    CASE (275) 42
    CHARACTER (276) 11
    ELSE (277) 30
    END (278) 21
    ENDSWITCH (279) 26
    FUNCTION (280) 2
    INTEGER (281) 9
    IS (282) 16 17 26
    LIST (283) 17
    OF (284) 17
    OTHERS (285) 26
    RETURNS (286) 2
    SWITCH (287) 26
    WHEN (288) 25
    REAL (289) 10
    IF (290) 29 30
    THEN (291) 29 30 32
    ELSIF (292) 32
    ENDIF (293) 29 30
    FOLD (294) 33
    ENDFOLD (295) 33
    LEFT (296) 34
    RIGHT (297) 35


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    function (49)
        on left: 1
        on right: 0
    function_header (50)
        on left: 2
        on right: 1
    parameters (51)
        on left: 3
        on right: 7
    more_parameters (52)
        on left: 4 5
        on right: 3 4
    parameter (53)
        on left: 6
        on right: 3 4
    optional_parameters (54)
        on left: 7 8
        on right: 2
    type (55)
        on left: 9 10 11
        on right: 2 6 16 17
    optional_variable (56)
        on left: 12 13
        on right: 1
    variables (57)
        on left: 14 15
        on right: 12 14
    variable (58)
        on left: 16 17
        on right: 14
    list (59)
        on left: 18
        on right: 17 38
    expressions (60)
        on left: 19 20
        on right: 18 19
    body (61)
        on left: 21
        on right: 1
    statement_ (62)
        on left: 22 23
        on right: 21 29 30 32
    statement (63)
        on left: 24 25 26 27 28
        on right: 16 22 26 42
    if_statement (64)
        on left: 29 30
        on right: 27
    elsif_clauses (65)
        on left: 31 32
        on right: 29 30 32
    fold_statement (66)
        on left: 33
        on right: 28
    direction (67)
        on left: 34 35
        on right: 33
    operator (68)
        on left: 36 37
        on right: 33
    list_choice (69)
        on left: 38 39
        on right: 33
    cases (70)
        on left: 40 41
        on right: 26 40
    case (71)
        on left: 42
        on right: 40
    condition (72)
        on left: 43 44
        on right: 25 29 30 32 43 45
    relation (73)
        on left: 45 46
        on right: 43 44
    expression (74)
        on left: 47 48
        on right: 19 20 24 25 26 46 47 51 55
    term (75)
        on left: 49 50
        on right: 47 48 49
    primary (76)
        on left: 51 52 53 54 55 56
        on right: 49 50


State 0

    0 $accept: • function $end

    FUNCTION  shift, and go to state 1

    function         go to state 2
    function_header  go to state 3


State 1

    2 function_header: FUNCTION • IDENTIFIER optional_parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: function • $end

    $end  shift, and go to state 5


State 3

    1 function: function_header • optional_variable body

    IDENTIFIER  shift, and go to state 6

    BEGIN_    reduce using rule 13 (optional_variable)
    BEGIN_    [reduce using rule 15 (variables)]
    $default  reduce using rule 13 (optional_variable)

    optional_variable  go to state 7
    variables          go to state 8
    variable           go to state 9


State 4

    2 function_header: FUNCTION IDENTIFIER • optional_parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 8 (optional_parameters)

    parameters           go to state 11
    parameter            go to state 12
    optional_parameters  go to state 13


State 5

    0 $accept: function $end •

    $default  accept


State 6

   16 variable: IDENTIFIER • ':' type IS statement ';'
   17         | IDENTIFIER • ':' LIST OF type IS list ';'

    ':'  shift, and go to state 14


State 7

    1 function: function_header optional_variable • body

    BEGIN_  shift, and go to state 15

    body  go to state 16


State 8

   12 optional_variable: variables •

    $default  reduce using rule 12 (optional_variable)


State 9

   14 variables: variable • variables

    IDENTIFIER  shift, and go to state 6

    $default  reduce using rule 15 (variables)

    variables  go to state 17
    variable   go to state 9


State 10

    6 parameter: IDENTIFIER • ':' type

    ':'  shift, and go to state 18


State 11

    7 optional_parameters: parameters •

    $default  reduce using rule 7 (optional_parameters)


State 12

    3 parameters: parameter • more_parameters

    ','  shift, and go to state 19

    $default  reduce using rule 5 (more_parameters)

    more_parameters  go to state 20


State 13

    2 function_header: FUNCTION IDENTIFIER optional_parameters • RETURNS type ';'

    RETURNS  shift, and go to state 21


State 14

   16 variable: IDENTIFIER ':' • type IS statement ';'
   17         | IDENTIFIER ':' • LIST OF type IS list ';'

    CHARACTER  shift, and go to state 22
    INTEGER    shift, and go to state 23
    LIST       shift, and go to state 24
    REAL       shift, and go to state 25

    type  go to state 26


State 15

   21 body: BEGIN_ • statement_ END ';'

    error         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    SWITCH        shift, and go to state 32
    WHEN          shift, and go to state 33
    IF            shift, and go to state 34
    FOLD          shift, and go to state 35
    '('           shift, and go to state 36

    statement_      go to state 37
    statement       go to state 38
    if_statement    go to state 39
    fold_statement  go to state 40
    expression      go to state 41
    term            go to state 42
    primary         go to state 43


State 16

    1 function: function_header optional_variable body •

    $default  reduce using rule 1 (function)


State 17

   14 variables: variable variables •

    $default  reduce using rule 14 (variables)


State 18

    6 parameter: IDENTIFIER ':' • type

    CHARACTER  shift, and go to state 22
    INTEGER    shift, and go to state 23
    REAL       shift, and go to state 25

    type  go to state 44


State 19

    4 more_parameters: ',' • parameter more_parameters

    IDENTIFIER  shift, and go to state 10

    parameter  go to state 45


State 20

    3 parameters: parameter more_parameters •

    $default  reduce using rule 3 (parameters)


State 21

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS • type ';'

    CHARACTER  shift, and go to state 22
    INTEGER    shift, and go to state 23
    REAL       shift, and go to state 25

    type  go to state 46


State 22

   11 type: CHARACTER •

    $default  reduce using rule 11 (type)


State 23

    9 type: INTEGER •

    $default  reduce using rule 9 (type)


State 24

   17 variable: IDENTIFIER ':' LIST • OF type IS list ';'

    OF  shift, and go to state 47


State 25

   10 type: REAL •

    $default  reduce using rule 10 (type)


State 26

   16 variable: IDENTIFIER ':' type • IS statement ';'

    IS  shift, and go to state 48


State 27

   23 statement_: error • ';'

    ';'  shift, and go to state 49


State 28

   55 primary: IDENTIFIER • '(' expression ')'
   56        | IDENTIFIER •

    '('  shift, and go to state 50

    $default  reduce using rule 56 (primary)


State 29

   52 primary: INT_LITERAL •

    $default  reduce using rule 52 (primary)


State 30

   53 primary: CHAR_LITERAL •

    $default  reduce using rule 53 (primary)


State 31

   54 primary: REAL_LITERAL •

    $default  reduce using rule 54 (primary)


State 32

   26 statement: SWITCH • expression IS cases OTHERS ARROW statement ';' ENDSWITCH

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 36

    expression  go to state 51
    term        go to state 42
    primary     go to state 43


State 33

   25 statement: WHEN • condition ',' expression ':' expression

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 52

    condition   go to state 53
    relation    go to state 54
    expression  go to state 55
    term        go to state 42
    primary     go to state 43


State 34

   29 if_statement: IF • condition THEN statement_ elsif_clauses ENDIF
   30             | IF • condition THEN statement_ elsif_clauses ELSE statement_ ENDIF

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 52

    condition   go to state 56
    relation    go to state 54
    expression  go to state 55
    term        go to state 42
    primary     go to state 43


State 35

   33 fold_statement: FOLD • direction operator list_choice ENDFOLD

    LEFT   shift, and go to state 57
    RIGHT  shift, and go to state 58

    direction  go to state 59


State 36

   51 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 36

    expression  go to state 60
    term        go to state 42
    primary     go to state 43


State 37

   21 body: BEGIN_ statement_ • END ';'

    END  shift, and go to state 61


State 38

   22 statement_: statement • ';'

    ';'  shift, and go to state 62


State 39

   27 statement: if_statement •

    $default  reduce using rule 27 (statement)


State 40

   28 statement: fold_statement •

    $default  reduce using rule 28 (statement)


State 41

   24 statement: expression •
   47 expression: expression • ADDOP term

    ADDOP  shift, and go to state 63

    $default  reduce using rule 24 (statement)


State 42

   48 expression: term •
   49 term: term • MULOP primary

    MULOP  shift, and go to state 64

    $default  reduce using rule 48 (expression)


State 43

   50 term: primary •

    $default  reduce using rule 50 (term)


State 44

    6 parameter: IDENTIFIER ':' type •

    $default  reduce using rule 6 (parameter)


State 45

    4 more_parameters: ',' parameter • more_parameters

    ','  shift, and go to state 19

    $default  reduce using rule 5 (more_parameters)

    more_parameters  go to state 65


State 46

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type • ';'

    ';'  shift, and go to state 66


State 47

   17 variable: IDENTIFIER ':' LIST OF • type IS list ';'

    CHARACTER  shift, and go to state 22
    INTEGER    shift, and go to state 23
    REAL       shift, and go to state 25

    type  go to state 67


State 48

   16 variable: IDENTIFIER ':' type IS • statement ';'

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    SWITCH        shift, and go to state 32
    WHEN          shift, and go to state 33
    IF            shift, and go to state 34
    FOLD          shift, and go to state 35
    '('           shift, and go to state 36

    statement       go to state 68
    if_statement    go to state 39
    fold_statement  go to state 40
    expression      go to state 41
    term            go to state 42
    primary         go to state 43


State 49

   23 statement_: error ';' •

    $default  reduce using rule 23 (statement_)


State 50

   55 primary: IDENTIFIER '(' • expression ')'

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 36

    expression  go to state 69
    term        go to state 42
    primary     go to state 43


State 51

   26 statement: SWITCH expression • IS cases OTHERS ARROW statement ';' ENDSWITCH
   47 expression: expression • ADDOP term

    ADDOP  shift, and go to state 63
    IS     shift, and go to state 70


State 52

   45 relation: '(' • condition ')'
   51 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 52

    condition   go to state 71
    relation    go to state 54
    expression  go to state 72
    term        go to state 42
    primary     go to state 43


State 53

   25 statement: WHEN condition • ',' expression ':' expression
   43 condition: condition • ANDOP relation

    ANDOP  shift, and go to state 73
    ','    shift, and go to state 74


State 54

   44 condition: relation •

    $default  reduce using rule 44 (condition)


State 55

   46 relation: expression • RELOP expression
   47 expression: expression • ADDOP term

    ADDOP  shift, and go to state 63
    RELOP  shift, and go to state 75


State 56

   29 if_statement: IF condition • THEN statement_ elsif_clauses ENDIF
   30             | IF condition • THEN statement_ elsif_clauses ELSE statement_ ENDIF
   43 condition: condition • ANDOP relation

    ANDOP  shift, and go to state 73
    THEN   shift, and go to state 76


State 57

   34 direction: LEFT •

    $default  reduce using rule 34 (direction)


State 58

   35 direction: RIGHT •

    $default  reduce using rule 35 (direction)


State 59

   33 fold_statement: FOLD direction • operator list_choice ENDFOLD

    ADDOP  shift, and go to state 77
    MULOP  shift, and go to state 78

    operator  go to state 79


State 60

   47 expression: expression • ADDOP term
   51 primary: '(' expression • ')'

    ADDOP  shift, and go to state 63
    ')'    shift, and go to state 80


State 61

   21 body: BEGIN_ statement_ END • ';'

    ';'  shift, and go to state 81


State 62

   22 statement_: statement ';' •

    $default  reduce using rule 22 (statement_)


State 63

   47 expression: expression ADDOP • term

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 36

    term     go to state 82
    primary  go to state 43


State 64

   49 term: term MULOP • primary

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 36

    primary  go to state 83


State 65

    4 more_parameters: ',' parameter more_parameters •

    $default  reduce using rule 4 (more_parameters)


State 66

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type ';' •

    $default  reduce using rule 2 (function_header)


State 67

   17 variable: IDENTIFIER ':' LIST OF type • IS list ';'

    IS  shift, and go to state 84


State 68

   16 variable: IDENTIFIER ':' type IS statement • ';'

    ';'  shift, and go to state 85


State 69

   47 expression: expression • ADDOP term
   55 primary: IDENTIFIER '(' expression • ')'

    ADDOP  shift, and go to state 63
    ')'    shift, and go to state 86


State 70

   26 statement: SWITCH expression IS • cases OTHERS ARROW statement ';' ENDSWITCH

    $default  reduce using rule 41 (cases)

    cases  go to state 87


State 71

   43 condition: condition • ANDOP relation
   45 relation: '(' condition • ')'

    ANDOP  shift, and go to state 73
    ')'    shift, and go to state 88


State 72

   46 relation: expression • RELOP expression
   47 expression: expression • ADDOP term
   51 primary: '(' expression • ')'

    ADDOP  shift, and go to state 63
    RELOP  shift, and go to state 75
    ')'    shift, and go to state 80


State 73

   43 condition: condition ANDOP • relation

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 52

    relation    go to state 89
    expression  go to state 55
    term        go to state 42
    primary     go to state 43


State 74

   25 statement: WHEN condition ',' • expression ':' expression

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 36

    expression  go to state 90
    term        go to state 42
    primary     go to state 43


State 75

   46 relation: expression RELOP • expression

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 36

    expression  go to state 91
    term        go to state 42
    primary     go to state 43


State 76

   29 if_statement: IF condition THEN • statement_ elsif_clauses ENDIF
   30             | IF condition THEN • statement_ elsif_clauses ELSE statement_ ENDIF

    error         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    SWITCH        shift, and go to state 32
    WHEN          shift, and go to state 33
    IF            shift, and go to state 34
    FOLD          shift, and go to state 35
    '('           shift, and go to state 36

    statement_      go to state 92
    statement       go to state 38
    if_statement    go to state 39
    fold_statement  go to state 40
    expression      go to state 41
    term            go to state 42
    primary         go to state 43


State 77

   36 operator: ADDOP •

    $default  reduce using rule 36 (operator)


State 78

   37 operator: MULOP •

    $default  reduce using rule 37 (operator)


State 79

   33 fold_statement: FOLD direction operator • list_choice ENDFOLD

    IDENTIFIER  shift, and go to state 93
    '('         shift, and go to state 94

    list         go to state 95
    list_choice  go to state 96


State 80

   51 primary: '(' expression ')' •

    $default  reduce using rule 51 (primary)


State 81

   21 body: BEGIN_ statement_ END ';' •

    $default  reduce using rule 21 (body)


State 82

   47 expression: expression ADDOP term •
   49 term: term • MULOP primary

    MULOP  shift, and go to state 64

    $default  reduce using rule 47 (expression)


State 83

   49 term: term MULOP primary •

    $default  reduce using rule 49 (term)


State 84

   17 variable: IDENTIFIER ':' LIST OF type IS • list ';'

    '('  shift, and go to state 94

    list  go to state 97


State 85

   16 variable: IDENTIFIER ':' type IS statement ';' •

    $default  reduce using rule 16 (variable)


State 86

   55 primary: IDENTIFIER '(' expression ')' •

    $default  reduce using rule 55 (primary)


State 87

   26 statement: SWITCH expression IS cases • OTHERS ARROW statement ';' ENDSWITCH
   40 cases: cases • case

    CASE    shift, and go to state 98
    OTHERS  shift, and go to state 99

    case  go to state 100


State 88

   45 relation: '(' condition ')' •

    $default  reduce using rule 45 (relation)


State 89

   43 condition: condition ANDOP relation •

    $default  reduce using rule 43 (condition)


State 90

   25 statement: WHEN condition ',' expression • ':' expression
   47 expression: expression • ADDOP term

    ADDOP  shift, and go to state 63
    ':'    shift, and go to state 101


State 91

   46 relation: expression RELOP expression •
   47 expression: expression • ADDOP term

    ADDOP  shift, and go to state 63

    $default  reduce using rule 46 (relation)


State 92

   29 if_statement: IF condition THEN statement_ • elsif_clauses ENDIF
   30             | IF condition THEN statement_ • elsif_clauses ELSE statement_ ENDIF

    ELSIF  shift, and go to state 102

    $default  reduce using rule 31 (elsif_clauses)

    elsif_clauses  go to state 103


State 93

   39 list_choice: IDENTIFIER •

    $default  reduce using rule 39 (list_choice)


State 94

   18 list: '(' • expressions ')'

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 36

    expressions  go to state 104
    expression   go to state 105
    term         go to state 42
    primary      go to state 43


State 95

   38 list_choice: list •

    $default  reduce using rule 38 (list_choice)


State 96

   33 fold_statement: FOLD direction operator list_choice • ENDFOLD

    ENDFOLD  shift, and go to state 106


State 97

   17 variable: IDENTIFIER ':' LIST OF type IS list • ';'

    ';'  shift, and go to state 107


State 98

   42 case: CASE • INT_LITERAL ARROW statement ';'

    INT_LITERAL  shift, and go to state 108


State 99

   26 statement: SWITCH expression IS cases OTHERS • ARROW statement ';' ENDSWITCH

    ARROW  shift, and go to state 109


State 100

   40 cases: cases case •

    $default  reduce using rule 40 (cases)


State 101

   25 statement: WHEN condition ',' expression ':' • expression

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 36

    expression  go to state 110
    term        go to state 42
    primary     go to state 43


State 102

   32 elsif_clauses: ELSIF • condition THEN statement_ elsif_clauses

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 52

    condition   go to state 111
    relation    go to state 54
    expression  go to state 55
    term        go to state 42
    primary     go to state 43


State 103

   29 if_statement: IF condition THEN statement_ elsif_clauses • ENDIF
   30             | IF condition THEN statement_ elsif_clauses • ELSE statement_ ENDIF

    ELSE   shift, and go to state 112
    ENDIF  shift, and go to state 113


State 104

   18 list: '(' expressions • ')'
   19 expressions: expressions • ',' expression

    ','  shift, and go to state 114
    ')'  shift, and go to state 115


State 105

   20 expressions: expression •
   47 expression: expression • ADDOP term

    ADDOP  shift, and go to state 63

    $default  reduce using rule 20 (expressions)


State 106

   33 fold_statement: FOLD direction operator list_choice ENDFOLD •

    $default  reduce using rule 33 (fold_statement)


State 107

   17 variable: IDENTIFIER ':' LIST OF type IS list ';' •

    $default  reduce using rule 17 (variable)


State 108

   42 case: CASE INT_LITERAL • ARROW statement ';'

    ARROW  shift, and go to state 116


State 109

   26 statement: SWITCH expression IS cases OTHERS ARROW • statement ';' ENDSWITCH

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    SWITCH        shift, and go to state 32
    WHEN          shift, and go to state 33
    IF            shift, and go to state 34
    FOLD          shift, and go to state 35
    '('           shift, and go to state 36

    statement       go to state 117
    if_statement    go to state 39
    fold_statement  go to state 40
    expression      go to state 41
    term            go to state 42
    primary         go to state 43


State 110

   25 statement: WHEN condition ',' expression ':' expression •
   47 expression: expression • ADDOP term

    ADDOP  shift, and go to state 63

    $default  reduce using rule 25 (statement)


State 111

   32 elsif_clauses: ELSIF condition • THEN statement_ elsif_clauses
   43 condition: condition • ANDOP relation

    ANDOP  shift, and go to state 73
    THEN   shift, and go to state 118


State 112

   30 if_statement: IF condition THEN statement_ elsif_clauses ELSE • statement_ ENDIF

    error         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    SWITCH        shift, and go to state 32
    WHEN          shift, and go to state 33
    IF            shift, and go to state 34
    FOLD          shift, and go to state 35
    '('           shift, and go to state 36

    statement_      go to state 119
    statement       go to state 38
    if_statement    go to state 39
    fold_statement  go to state 40
    expression      go to state 41
    term            go to state 42
    primary         go to state 43


State 113

   29 if_statement: IF condition THEN statement_ elsif_clauses ENDIF •

    $default  reduce using rule 29 (if_statement)


State 114

   19 expressions: expressions ',' • expression

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    '('           shift, and go to state 36

    expression  go to state 120
    term        go to state 42
    primary     go to state 43


State 115

   18 list: '(' expressions ')' •

    $default  reduce using rule 18 (list)


State 116

   42 case: CASE INT_LITERAL ARROW • statement ';'

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    SWITCH        shift, and go to state 32
    WHEN          shift, and go to state 33
    IF            shift, and go to state 34
    FOLD          shift, and go to state 35
    '('           shift, and go to state 36

    statement       go to state 121
    if_statement    go to state 39
    fold_statement  go to state 40
    expression      go to state 41
    term            go to state 42
    primary         go to state 43


State 117

   26 statement: SWITCH expression IS cases OTHERS ARROW statement • ';' ENDSWITCH

    ';'  shift, and go to state 122


State 118

   32 elsif_clauses: ELSIF condition THEN • statement_ elsif_clauses

    error         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CHAR_LITERAL  shift, and go to state 30
    REAL_LITERAL  shift, and go to state 31
    SWITCH        shift, and go to state 32
    WHEN          shift, and go to state 33
    IF            shift, and go to state 34
    FOLD          shift, and go to state 35
    '('           shift, and go to state 36

    statement_      go to state 123
    statement       go to state 38
    if_statement    go to state 39
    fold_statement  go to state 40
    expression      go to state 41
    term            go to state 42
    primary         go to state 43


State 119

   30 if_statement: IF condition THEN statement_ elsif_clauses ELSE statement_ • ENDIF

    ENDIF  shift, and go to state 124


State 120

   19 expressions: expressions ',' expression •
   47 expression: expression • ADDOP term

    ADDOP  shift, and go to state 63

    $default  reduce using rule 19 (expressions)


State 121

   42 case: CASE INT_LITERAL ARROW statement • ';'

    ';'  shift, and go to state 125


State 122

   26 statement: SWITCH expression IS cases OTHERS ARROW statement ';' • ENDSWITCH

    ENDSWITCH  shift, and go to state 126


State 123

   32 elsif_clauses: ELSIF condition THEN statement_ • elsif_clauses

    ELSIF  shift, and go to state 102

    $default  reduce using rule 31 (elsif_clauses)

    elsif_clauses  go to state 127


State 124

   30 if_statement: IF condition THEN statement_ elsif_clauses ELSE statement_ ENDIF •

    $default  reduce using rule 30 (if_statement)


State 125

   42 case: CASE INT_LITERAL ARROW statement ';' •

    $default  reduce using rule 42 (case)


State 126

   26 statement: SWITCH expression IS cases OTHERS ARROW statement ';' ENDSWITCH •

    $default  reduce using rule 26 (statement)


State 127

   32 elsif_clauses: ELSIF condition THEN statement_ elsif_clauses •

    $default  reduce using rule 32 (elsif_clauses)
